# Go

./: .gitignore  README.md
AI/: go-ai.cabal
AI/app/: Main.hs
AI/src/: Lib.hs
AI/test/: Spec.hs
Docs/: Doxyfile
Go/: AI.cpp  Board.cpp  Board.hpp  History.cpp  History.hpp  Move.hpp  main.cpp
Go.xcodeproj/: project.pbxproj
Go.xcodeproj/xcuserdata/ellis.xcuserdatad/xcschemes/: Go.xcscheme  GoGUI.xcscheme  Test.xcscheme  xcschememanagement.plist
GoGUI/: Button.cpp  Button.hpp  Sprite.cpp  Sprite.hpp  Text.cpp  Text.hpp  Texture.cpp  Texture.hpp  Window.cpp  Window.hpp  main.cpp
test/: ManualTest.docx  ManualTest.pptx  TestGo.cpp
