name:                go-ai
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/go-ai#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5, containers >= 0.2
  default-language:    Haskell2010

executable main
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base , containers >= 0.2 , go-ai , random , array
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      app , test
  main-is:             Spec.hs
  build-depends:       base , containers >= 0.2 , go-ai , random , array
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -main-is Spec.main
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/go-ai
